fix(styles): missing scroll padding
In-page anchors need this to scroll to the right spot, else the header-nav would cover the anchor element.

--- a/sass/overrides.scss
+++ b/sass/overrides.scss
@@ -3,6 +3,10 @@
 	src: local(Hack),local(sfmono-regular),local(menlo),local(monaco),local(consolas),local("Liberation Mono"),local("Courier New"),local(monospace);
 }
 
+html {
+	scroll-padding-top: 4.25rem;
+}
+
 html:has(body.draft) {
 	background: repeating-linear-gradient(45deg, rgb(17, 17, 17) 0% 5%, rgb(218, 165, 32) 5% 10%);
 	padding: 0 2rem;
